WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
231289
AX: Make AXCoreObject::contents return-by-value instead of return-by-out-parameter
https://bugs.webkit.org/show_bug.cgi?id=231289
Summary
AX: Make AXCoreObject::contents return-by-value instead of return-by-out-para...
Tyler Wilcock
Reported
2021-10-06 07:32:09 PDT
This is more ergonomic.
Attachments
Patch
(7.85 KB, patch)
2021-10-06 07:41 PDT
,
Tyler Wilcock
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2021-10-06 07:32:49 PDT
<
rdar://problem/83933189
>
Tyler Wilcock
Comment 2
2021-10-06 07:41:19 PDT
Created
attachment 440365
[details]
Patch
EWS
Comment 3
2021-10-06 16:56:25 PDT
Committed
r283680
(
242618@main
): <
https://commits.webkit.org/242618@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 440365
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug