AX: Make AccessibilityObjectInterface::contents return-by-value instead of return-by-out-parameter https://bugs.webkit.org/show_bug.cgi?id=231289

Patch by Tyler Wilcock <tyler_w@apple.com> on 2021-10-06
Reviewed by Darin Adler.

Make AccessibilityObjectInterface::contents return-by-value instead of
return-by-out-parameter as this is more ergonomic.

* accessibility/AccessibilityObject.cpp:
(WebCore::AccessibilityObject::contents):
* accessibility/AccessibilityObject.h:
* accessibility/AccessibilityObjectInterface.h:
* accessibility/isolatedtree/AXIsolatedObject.cpp:
(WebCore::AXIsolatedObject::initializeAttributeData):
(WebCore::AXIsolatedObject::contents):
* accessibility/isolatedtree/AXIsolatedObject.h:
* accessibility/mac/WebAccessibilityObjectWrapperMac.mm:
(-[WebAccessibilityObjectWrapper accessibilityAttributeValue:]):

Canonical link: https://commits.webkit.org/242618@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@283680 268f45cc-cd09-0410-ab3c-d52691b4dbfc